# Oxydactylus

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml
.superpowers/sdd/: task-6-report.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: oxydactylus.proto
crates/core/src/: config.rs  error.rs  lib.rs  proto.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  nginx.conf  package-lock.json
crates/frontend/src/: lib.rs  state.rs
crates/frontend/src/api/: auth.rs  client.rs  eggs.rs  mod.rs  nodes.rs  servers.rs  sse.rs  users.rs
crates/frontend/src/components/: button.rs  card.rs  error_banner.rs  input.rs  mod.rs  modal.rs  navbar.rs  table.rs
crates/frontend/src/pages/: login.rs  mod.rs  not_found.rs
crates/frontend/src/pages/admin/: eggs.rs  mod.rs  nodes.rs  servers.rs  users.rs
crates/frontend/src/pages/client/: backups_tab.rs  console_tab.rs  dashboard.rs  databases_tab.rs  files_tab.rs  logs_tab.rs  mod.rs  schedules_tab.rs  server_detail.rs  settings_tab.rs  startup_tab.rs  stats_tab.rs
crates/node/: Cargo.toml
crates/node/src/: backups.rs  docker.rs  error.rs  files.rs  interceptor.rs  lib.rs  server.rs  sftp.rs  stream.rs
crates/panel/: Cargo.toml  build.rs
crates/panel/migrations/: 001_initial.sql  001_users.sql  002_nodes.sql  003_servers.sql  004_eggs.sql  005_add_status_to_servers.sql
crates/panel/src/: activity.rs  allocations.rs  auth.rs  backups.rs  database_hosts.rs  db.rs  egg_vars.rs  eggs.rs  error.rs  files.rs  lib.rs  node_client.rs  nodes.rs  permissions.rs  scheduler.rs  schedules.rs  server_databases.rs  servers.rs  settings.rs  startup.rs  subusers.rs  users.rs
crates/panel/src/backup/: driver.rs  local.rs  mod.rs
crates/panel/tests/: integration.rs
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-24-eggs.md  2026-06-24-foundation.md  2026-06-24-node-daemon.md  2026-06-24-panel-backend.md  2026-06-25-frontend-leptos.md  2026-06-25-log-streaming.md  2026-06-25-ownership-subusers.md  2026-06-25-server-status-tracking.md  2026-06-26-alpha-fixes.md  2026-06-26-frontend-spa.md
docs/superpowers/specs/: 2026-06-24-oxydactylus-design.md  2026-06-25-ownership-subusers-design.md  2026-06-25-server-status-tracking-design.md  2026-06-26-features-completas-design.md
