[workspace]
members  = ["crates/core", "crates/node", "crates/panel", "crates/cli"]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
tonic              = { version = "0.12", features = ["transport"] }
prost              = "0.13"
serde              = { version = "1",    features = ["derive"] }
toml               = "0.8"
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1",   features = ["v4", "serde"] }
async-trait        = "0.1"
futures-util       = "0.3"
tokio-stream       = "0.1"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
