[workspace]
members  = ["crates/core", "crates/node", "crates/panel", "crates/cli"]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
tonic              = { version = "0.12", features = ["transport"] }
prost              = "0.13"
serde              = { version = "1",    features = ["derive"] }
toml               = "0.8"
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1",   features = ["v4", "serde"] }
async-trait        = "0.1"
futures-util       = "0.3"
tokio-stream       = "0.1"
axum               = { version = "0.7", features = ["macros"] }
sqlx               = { version = "0.8", features = ["any", "postgres", "sqlite", "mysql", "runtime-tokio-rustls", "uuid", "chrono", "migrate", "json"] }
jsonwebtoken       = "9"
argon2             = { version = "0.5", features = ["std"] }
chrono             = { version = "0.4", features = ["serde"] }
serde_json         = "1"
tower              = { version = "0.4", features = ["util"] }
regex              = "1"
aes-gcm            = "0.10"
rand               = "0.8"
hex                = "0.4"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
