[package]
name    = "oxydactylus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxydactylus"
path = "src/main.rs"

[dependencies]
oxy-core   = { path = "../core" }
oxy-node   = { path = "../node" }
oxy-panel  = { path = "../panel" }
tokio      = { workspace = true }
clap       = { version = "4", features = ["derive"] }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
toml       = { workspace = true }
