[workspace]

[package]
name = "oxydactylus-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
] }
console_error_panic_hook = "0.1"
