[package]
name    = "oxy-node"
version = "0.1.0"
edition = "2021"

[dependencies]
oxy-core     = { path = "../core" }
tokio        = { workspace = true }
tonic        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
bollard      = "0.17"
base64       = "0.22"
sha2         = { workspace = true }

[dev-dependencies]
mockall    = "0.13"
tokio-test = "0.4"
